JSGenerated/Parser.js
// Generated from /Users/cristiamacuna/Documents/IIS-2019/Compiladores/Proyecto/G4/Parser.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ParserListener = require('./ParserListener').ParserListener;
var grammarFileName = "Parser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "','", "'='", "'('", "')'", "'['", "']'", 
                     "'*'", "'+'", "'-'", "':'", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'/'", "'INT'", "'STRING'", "'if'", "'while'", 
                     "'let'", "'then'", "'else'", "'in'", "'do'", "'begin'", 
                     "'end'", "'const'", "'var'", "'def'", "'return'", "'\n'", 
                     "'print'", "'{'", "'}'", "'len'" ];

var symbolicNames = [ null, "PyCOMA", "COMA", "ASSIGN", "PIZQ", "PDER", 
                      "CIZQ", "CDER", "MULT", "SUM", "RESTA", "DOSPUN", 
                      "MAYOR", "MENOR", "MAYORIGUAL", "MENORIGUAL", "COMP", 
                      "DIV", "INT", "STRING", "IF", "WHILE", "LET", "THEN", 
                      "ELSE", "IN", "DO", "BEGIN", "END", "CONST", "VAR", 
                      "DEF", "RETURN", "NEWLINE", "PRINT", "INDENT", "DEDENT", 
                      "LEN", "NUM", "ID", "STR", "WS", "COMMENT", "FOR" ];

var ruleNames =  [ "program", "statement", "defStatement", "argList", "moreArgs", 
                   "ifStatement", "whileStatement", "forStatement", "returnStatement", 
                   "printStatement", "assignStatement", "functionCallStatement", 
                   "expressionStatement", "sequence", "moreStatements", 
                   "expression", "comparison", "additionExpression", "additionFactor", 
                   "multiplicationExpression", "multiplicationFactor", "elementExpression", 
                   "elementAccess", "functionCallExpression", "expressionList", 
                   "moreExpressions", "primitiveExpression", "listExpression" ];

function Parser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

Parser.prototype = Object.create(antlr4.Parser.prototype);
Parser.prototype.constructor = Parser;

Object.defineProperty(Parser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

Parser.EOF = antlr4.Token.EOF;
Parser.PyCOMA = 1;
Parser.COMA = 2;
Parser.ASSIGN = 3;
Parser.PIZQ = 4;
Parser.PDER = 5;
Parser.CIZQ = 6;
Parser.CDER = 7;
Parser.MULT = 8;
Parser.SUM = 9;
Parser.RESTA = 10;
Parser.DOSPUN = 11;
Parser.MAYOR = 12;
Parser.MENOR = 13;
Parser.MAYORIGUAL = 14;
Parser.MENORIGUAL = 15;
Parser.COMP = 16;
Parser.DIV = 17;
Parser.INT = 18;
Parser.STRING = 19;
Parser.IF = 20;
Parser.WHILE = 21;
Parser.LET = 22;
Parser.THEN = 23;
Parser.ELSE = 24;
Parser.IN = 25;
Parser.DO = 26;
Parser.BEGIN = 27;
Parser.END = 28;
Parser.CONST = 29;
Parser.VAR = 30;
Parser.DEF = 31;
Parser.RETURN = 32;
Parser.NEWLINE = 33;
Parser.PRINT = 34;
Parser.INDENT = 35;
Parser.DEDENT = 36;
Parser.LEN = 37;
Parser.NUM = 38;
Parser.ID = 39;
Parser.STR = 40;
Parser.WS = 41;
Parser.COMMENT = 42;
Parser.FOR = 43;

Parser.RULE_program = 0;
Parser.RULE_statement = 1;
Parser.RULE_defStatement = 2;
Parser.RULE_argList = 3;
Parser.RULE_moreArgs = 4;
Parser.RULE_ifStatement = 5;
Parser.RULE_whileStatement = 6;
Parser.RULE_forStatement = 7;
Parser.RULE_returnStatement = 8;
Parser.RULE_printStatement = 9;
Parser.RULE_assignStatement = 10;
Parser.RULE_functionCallStatement = 11;
Parser.RULE_expressionStatement = 12;
Parser.RULE_sequence = 13;
Parser.RULE_moreStatements = 14;
Parser.RULE_expression = 15;
Parser.RULE_comparison = 16;
Parser.RULE_additionExpression = 17;
Parser.RULE_additionFactor = 18;
Parser.RULE_multiplicationExpression = 19;
Parser.RULE_multiplicationFactor = 20;
Parser.RULE_elementExpression = 21;
Parser.RULE_elementAccess = 22;
Parser.RULE_functionCallExpression = 23;
Parser.RULE_expressionList = 24;
Parser.RULE_moreExpressions = 25;
Parser.RULE_primitiveExpression = 26;
Parser.RULE_listExpression = 27;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.statement = function() {
    return this.getTypedRuleContext(StatementContext,0);
};

ProgramContext.prototype.program = function() {
    return this.getTypedRuleContext(ProgramContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitProgram(this);
	}
};




Parser.ProgramContext = ProgramContext;

Parser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, Parser.RULE_program);
    try {
        this.state = 60;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 56;
            this.statement();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 57;
            this.statement();
            this.state = 58;
            this.program();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.defStatement = function() {
    return this.getTypedRuleContext(DefStatementContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};

StatementContext.prototype.printStatement = function() {
    return this.getTypedRuleContext(PrintStatementContext,0);
};

StatementContext.prototype.whileStatement = function() {
    return this.getTypedRuleContext(WhileStatementContext,0);
};

StatementContext.prototype.forStatement = function() {
    return this.getTypedRuleContext(ForStatementContext,0);
};

StatementContext.prototype.assignStatement = function() {
    return this.getTypedRuleContext(AssignStatementContext,0);
};

StatementContext.prototype.functionCallStatement = function() {
    return this.getTypedRuleContext(FunctionCallStatementContext,0);
};

StatementContext.prototype.expressionStatement = function() {
    return this.getTypedRuleContext(ExpressionStatementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitStatement(this);
	}
};




Parser.StatementContext = StatementContext;

Parser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, Parser.RULE_statement);
    try {
        this.state = 71;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 62;
            this.defStatement();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 63;
            this.ifStatement();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 64;
            this.returnStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 65;
            this.printStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 66;
            this.whileStatement();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 67;
            this.forStatement();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 68;
            this.assignStatement();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 69;
            this.functionCallStatement();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 70;
            this.expressionStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DefStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_defStatement;
    return this;
}

DefStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefStatementContext.prototype.constructor = DefStatementContext;

DefStatementContext.prototype.DEF = function() {
    return this.getToken(Parser.DEF, 0);
};

DefStatementContext.prototype.ID = function() {
    return this.getToken(Parser.ID, 0);
};

DefStatementContext.prototype.PIZQ = function() {
    return this.getToken(Parser.PIZQ, 0);
};

DefStatementContext.prototype.argList = function() {
    return this.getTypedRuleContext(ArgListContext,0);
};

DefStatementContext.prototype.PDER = function() {
    return this.getToken(Parser.PDER, 0);
};

DefStatementContext.prototype.DOSPUN = function() {
    return this.getToken(Parser.DOSPUN, 0);
};

DefStatementContext.prototype.sequence = function() {
    return this.getTypedRuleContext(SequenceContext,0);
};

DefStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterDefStatement(this);
	}
};

DefStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitDefStatement(this);
	}
};




Parser.DefStatementContext = DefStatementContext;

Parser.prototype.defStatement = function() {

    var localctx = new DefStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, Parser.RULE_defStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 73;
        this.match(Parser.DEF);
        this.state = 74;
        this.match(Parser.ID);
        this.state = 75;
        this.match(Parser.PIZQ);
        this.state = 76;
        this.argList();
        this.state = 77;
        this.match(Parser.PDER);
        this.state = 78;
        this.match(Parser.DOSPUN);
        this.state = 79;
        this.sequence();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ArgListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_argList;
    return this;
}

ArgListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArgListContext.prototype.constructor = ArgListContext;

ArgListContext.prototype.ID = function() {
    return this.getToken(Parser.ID, 0);
};

ArgListContext.prototype.argList = function() {
    return this.getTypedRuleContext(ArgListContext,0);
};

ArgListContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterArgList(this);
	}
};

ArgListContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitArgList(this);
	}
};




Parser.ArgListContext = ArgListContext;

Parser.prototype.argList = function() {

    var localctx = new ArgListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, Parser.RULE_argList);
    try {
        this.state = 84;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case Parser.ID:
            this.enterOuterAlt(localctx, 1);
            this.state = 81;
            this.match(Parser.ID);
            this.state = 82;
            this.argList();
            break;
        case Parser.PDER:
            this.enterOuterAlt(localctx, 2);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MoreArgsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_moreArgs;
    return this;
}

MoreArgsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MoreArgsContext.prototype.constructor = MoreArgsContext;

MoreArgsContext.prototype.COMA = function() {
    return this.getToken(Parser.COMA, 0);
};

MoreArgsContext.prototype.ID = function() {
    return this.getToken(Parser.ID, 0);
};

MoreArgsContext.prototype.moreArgs = function() {
    return this.getTypedRuleContext(MoreArgsContext,0);
};

MoreArgsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterMoreArgs(this);
	}
};

MoreArgsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitMoreArgs(this);
	}
};




Parser.MoreArgsContext = MoreArgsContext;

Parser.prototype.moreArgs = function() {

    var localctx = new MoreArgsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, Parser.RULE_moreArgs);
    try {
        this.state = 90;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 86;
            this.match(Parser.COMA);
            this.state = 87;
            this.match(Parser.ID);
            this.state = 88;
            this.moreArgs();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IfStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_ifStatement;
    return this;
}

IfStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfStatementContext.prototype.constructor = IfStatementContext;

IfStatementContext.prototype.IF = function() {
    return this.getToken(Parser.IF, 0);
};

IfStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

IfStatementContext.prototype.DOSPUN = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(Parser.DOSPUN);
    } else {
        return this.getToken(Parser.DOSPUN, i);
    }
};


IfStatementContext.prototype.sequence = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SequenceContext);
    } else {
        return this.getTypedRuleContext(SequenceContext,i);
    }
};

IfStatementContext.prototype.ELSE = function() {
    return this.getToken(Parser.ELSE, 0);
};

IfStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterIfStatement(this);
	}
};

IfStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitIfStatement(this);
	}
};




Parser.IfStatementContext = IfStatementContext;

Parser.prototype.ifStatement = function() {

    var localctx = new IfStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, Parser.RULE_ifStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 92;
        this.match(Parser.IF);
        this.state = 93;
        this.expression();
        this.state = 94;
        this.match(Parser.DOSPUN);
        this.state = 95;
        this.sequence();
        this.state = 96;
        this.match(Parser.ELSE);
        this.state = 97;
        this.match(Parser.DOSPUN);
        this.state = 98;
        this.sequence();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function WhileStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_whileStatement;
    return this;
}

WhileStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WhileStatementContext.prototype.constructor = WhileStatementContext;

WhileStatementContext.prototype.WHILE = function() {
    return this.getToken(Parser.WHILE, 0);
};

WhileStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

WhileStatementContext.prototype.DOSPUN = function() {
    return this.getToken(Parser.DOSPUN, 0);
};

WhileStatementContext.prototype.sequence = function() {
    return this.getTypedRuleContext(SequenceContext,0);
};

WhileStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterWhileStatement(this);
	}
};

WhileStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitWhileStatement(this);
	}
};




Parser.WhileStatementContext = WhileStatementContext;

Parser.prototype.whileStatement = function() {

    var localctx = new WhileStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, Parser.RULE_whileStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 100;
        this.match(Parser.WHILE);
        this.state = 101;
        this.expression();
        this.state = 102;
        this.match(Parser.DOSPUN);
        this.state = 103;
        this.sequence();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ForStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_forStatement;
    return this;
}

ForStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForStatementContext.prototype.constructor = ForStatementContext;

ForStatementContext.prototype.FOR = function() {
    return this.getToken(Parser.FOR, 0);
};

ForStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ForStatementContext.prototype.IN = function() {
    return this.getToken(Parser.IN, 0);
};

ForStatementContext.prototype.expressionList = function() {
    return this.getTypedRuleContext(ExpressionListContext,0);
};

ForStatementContext.prototype.DOSPUN = function() {
    return this.getToken(Parser.DOSPUN, 0);
};

ForStatementContext.prototype.sequence = function() {
    return this.getTypedRuleContext(SequenceContext,0);
};

ForStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterForStatement(this);
	}
};

ForStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitForStatement(this);
	}
};




Parser.ForStatementContext = ForStatementContext;

Parser.prototype.forStatement = function() {

    var localctx = new ForStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, Parser.RULE_forStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105;
        this.match(Parser.FOR);
        this.state = 106;
        this.expression();
        this.state = 107;
        this.match(Parser.IN);
        this.state = 108;
        this.expressionList();
        this.state = 109;
        this.match(Parser.DOSPUN);
        this.state = 110;
        this.sequence();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReturnStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_returnStatement;
    return this;
}

ReturnStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnStatementContext.prototype.constructor = ReturnStatementContext;

ReturnStatementContext.prototype.RETURN = function() {
    return this.getToken(Parser.RETURN, 0);
};

ReturnStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ReturnStatementContext.prototype.NEWLINE = function() {
    return this.getToken(Parser.NEWLINE, 0);
};

ReturnStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterReturnStatement(this);
	}
};

ReturnStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitReturnStatement(this);
	}
};




Parser.ReturnStatementContext = ReturnStatementContext;

Parser.prototype.returnStatement = function() {

    var localctx = new ReturnStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, Parser.RULE_returnStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this.match(Parser.RETURN);
        this.state = 113;
        this.expression();
        this.state = 114;
        this.match(Parser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrintStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_printStatement;
    return this;
}

PrintStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrintStatementContext.prototype.constructor = PrintStatementContext;

PrintStatementContext.prototype.PRINT = function() {
    return this.getToken(Parser.PRINT, 0);
};

PrintStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

PrintStatementContext.prototype.NEWLINE = function() {
    return this.getToken(Parser.NEWLINE, 0);
};

PrintStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterPrintStatement(this);
	}
};

PrintStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitPrintStatement(this);
	}
};




Parser.PrintStatementContext = PrintStatementContext;

Parser.prototype.printStatement = function() {

    var localctx = new PrintStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, Parser.RULE_printStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 116;
        this.match(Parser.PRINT);
        this.state = 117;
        this.expression();
        this.state = 118;
        this.match(Parser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AssignStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_assignStatement;
    return this;
}

AssignStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignStatementContext.prototype.constructor = AssignStatementContext;

AssignStatementContext.prototype.ID = function() {
    return this.getToken(Parser.ID, 0);
};

AssignStatementContext.prototype.ASSIGN = function() {
    return this.getToken(Parser.ASSIGN, 0);
};

AssignStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

AssignStatementContext.prototype.NEWLINE = function() {
    return this.getToken(Parser.NEWLINE, 0);
};

AssignStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterAssignStatement(this);
	}
};

AssignStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitAssignStatement(this);
	}
};




Parser.AssignStatementContext = AssignStatementContext;

Parser.prototype.assignStatement = function() {

    var localctx = new AssignStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, Parser.RULE_assignStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.match(Parser.ID);
        this.state = 121;
        this.match(Parser.ASSIGN);
        this.state = 122;
        this.expression();
        this.state = 123;
        this.match(Parser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FunctionCallStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_functionCallStatement;
    return this;
}

FunctionCallStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionCallStatementContext.prototype.constructor = FunctionCallStatementContext;

FunctionCallStatementContext.prototype.primitiveExpression = function() {
    return this.getTypedRuleContext(PrimitiveExpressionContext,0);
};

FunctionCallStatementContext.prototype.PIZQ = function() {
    return this.getToken(Parser.PIZQ, 0);
};

FunctionCallStatementContext.prototype.expressionList = function() {
    return this.getTypedRuleContext(ExpressionListContext,0);
};

FunctionCallStatementContext.prototype.PDER = function() {
    return this.getToken(Parser.PDER, 0);
};

FunctionCallStatementContext.prototype.NEWLINE = function() {
    return this.getToken(Parser.NEWLINE, 0);
};

FunctionCallStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.enterFunctionCallStatement(this);
	}
};

FunctionCallStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParserListener ) {
        listener.exitFunctionCallStatement(this);
	}
};




Parser.FunctionCallStatementContext = FunctionCallStatementContext;

Parser.prototype.functionCallStatement = function() {

    var localctx = new FunctionCallStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, Parser.RULE_functionCallStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 125;
        this.primitiveExpression();
        this.state = 126;
        this.match(Parser.PIZQ);
        this.state = 127;
        this.expressionList();
        this.state = 128;
        this.match(Parser.PDER);
        this.state = 129;
        this.match(Parser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Parser.RULE_expressionStatement;
    return this;
}

ExpressionStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionStatementContext.prototype.constructor = ExpressionStatementContext;

ExpressionStatementContext.prototype.expressionList = function() {
    return this.getTypedRuleContext(ExpressionListContext,0);
};

ExpressionStatementContext.prototype.NEWLINE = function() {
    return this.getToken(Parser.NEWLINE, 0);
};
